--- a/.env.example
+++ b/.env.example
@@ -123,3 +123,5 @@ database.default.DBDriver = MySQLi
 #--------------------------------------------------------------------
 
 # logger.threshold = 4
+
+GMAPS_API_KEY = ""
