--- a/.env.example
+++ b/.env.example
@@ -124,4 +124,8 @@ database.default.DBDriver = MySQLi
 
 # logger.threshold = 4
 
+#--------------------------------------------------------------------
+# Google Maps API Key
+#--------------------------------------------------------------------
+
 GMAPS_API_KEY = ""
